--- a/app/src/main/res/layout-v26/fragment_header.xml
+++ b/app/src/main/res/layout-v26/fragment_header.xml
@@ -7,15 +7,6 @@
     android:fitsSystemWindows="true"
     android:gravity="center">
 
-    <ImageView
-        android:layout_marginStart="10dp"
-        android:id="@+id/img_icon"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".30"
-        android:focusable="true"
-        android:src="@drawable/ic_logo" />
-
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -23,9 +14,10 @@
         android:gravity="center"
         android:layout_marginStart="0dp"
         android:layout_toEndOf="@+id/img_icon"
+        android:typeface="sans"
         android:text="@string/title"
         android:textColor="@color/black"
-        android:textSize="26sp"
+        android:textSize="38sp"
         android:textStyle="bold" />
 
 </LinearLayout>
