--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,7 +12,8 @@
         android:layout_height="match_parent"
         android:divider="@color/grey"
         android:dividerHeight="1dp"
-        android:longClickable="true" />
+        android:longClickable="true"
+        />
 
 
-</LinearLayout>
+</RelativeLayout>
