--- a/app/src/main/res/layout/fragment_music_player.xml
+++ b/app/src/main/res/layout/fragment_music_player.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="110dp"
-    android:background="@color/dark_grey">
+    android:background="?attr/colorPrimary"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <TextView
             android:id="@+id/tv_currently_playing"
@@ -21,7 +23,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textColor="@color/white"/>
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -37,40 +39,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:backgroundTint="@color/dark_grey"
-            android:src="@drawable/ic_loop" />
+            android:src="@drawable/ic_loop"
+            android:backgroundTint="?attr/colorPrimary"
+            />
 
         <ImageButton
             android:id="@+id/img_btn_previous"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:backgroundTint="@color/dark_grey"
-            android:src="@drawable/ic_previous" />
+            android:src="@drawable/ic_previous"
+            android:backgroundTint="?attr/colorPrimary"/>
 
         <ImageButton
             android:id="@+id/img_btn_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:backgroundTint="@color/dark_grey"
-            android:src="@drawable/ic_play" />
+            android:src="@drawable/ic_play"
+            android:backgroundTint="?attr/colorPrimary"/>
 
         <ImageButton
             android:id="@+id/img_btn_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:backgroundTint="@color/dark_grey"
-            android:src="@drawable/ic_next" />
+            android:src="@drawable/ic_next"
+            android:backgroundTint="?attr/colorPrimary"/>
 
         <ImageButton
             android:id="@+id/img_btn_shuffle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:backgroundTint="@color/dark_grey"
-            android:src="@drawable/ic_shuffle" />
+            android:src="@drawable/ic_shuffle"
+            android:backgroundTint="?attr/colorPrimary"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -88,9 +92,9 @@
             android:layout_weight="0.1"
             android:gravity="end"
             android:text="@string/current_song_time"
-            android:textColor="@color/white"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:paddingBottom="10dp"/>
 
         <SeekBar
             android:id="@+id/sb_song_bar"
@@ -98,10 +102,9 @@
             android:layout_height="wrap_content"
             android:layout_weight=".8"
             android:layout_gravity="center"
-            android:backgroundTint="@color/white"
             android:fitsSystemWindows="true"
-            android:progressTint="@color/white"
-            android:thumbTint="@color/white" />
+            android:paddingBottom="10dp"
+             />
 
         <TextView
             android:id="@+id/tv_total_time"
@@ -109,9 +112,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:text="@string/end_song_time"
-            android:textColor="@color/white"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:paddingBottom="10dp"/>
     </LinearLayout>
 
 </RelativeLayout>
