--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#C0C0C0</color>
-    <color name="dark_grey">#2b2d2f</color>
+    <color name="dark_grey">#3b3d40</color>
+    <color name="colorPrimary">@color/grey</color>
+    <color name="colorPrimaryVariant">@color/dark_grey</color>
+    <color name="colorOnPrimary">@color/white</color>
 </resources>
